First successfully-built

--- a/was/data/test.properties
+++ b/was/data/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.4
-#Tue Jul 10 15:51:05 ICT 2018
+#Fri Sep 28 17:00:42 ICT 2018
 version=2.3.4
-modified=yes
+modified=no
 tx_timestamp=0
